--- a/numeric.tex
+++ b/numeric.tex
@@ -369,7 +369,7 @@ PWEM consists in expressing the structure permittivity in the inverse space, usi
 
 
 For the given wavevector, PWEM also gives the shape of the fields for each mode. This approach turns out to be easier and more reliable than running the frequency-domain solver in FDTD selecting the approximate frequencies of the band edges, so we mostly used PWEM to get an insight into the field distribution. 
-As a convenient implementation of PWEM, we used  the freely available program \textit{MPB}\cite{johnson2001mpb}, again from the \textit{ab-initio} group at MIT.
+As a convenient implementation of PWEM, we used the freely available program \textit{MPB} \cite{johnson2001mpb}, implemented by the same group as MEEP.
 % Todo comments on MPB
 %}}}
 %  \paragraph{Comparison of PWEM to FDTD} %{{{ WTF
