--- a/theory.tex
+++ b/theory.tex
@@ -425,7 +425,7 @@ Such a case can indeed occur in natural or artificial media, as described in mor
 \begin{figure}[ht] \caption{Frequency-dependent IFCs of \textbf{(a)} an ordinary medium, \textbf{(b)} an isotropic medium with a negative index of refraction and \textbf{(c)} an anisotropic medium with a negative index of refraction. } \label{fg_ifcnr} \centering  %% TODO  WRITE
 	\includegraphics[width=.9\textwidth]{img/ifc_negrefr.pdf} 
 \end{figure}
-\begin{figure}[ht] \caption{Wavevector-dependent IFCs for one frequency, for the same medium as in Fig. \ref{fg_ifcnr} \todo{extend}} \label{fg_ifcnrk} \centering  %% TODO  WRITE
+\begin{figure}[ht] \caption{Wavevector-dependent IFCs for one frequency, for the same examples of media as in Fig. \ref{fg_ifcnr}. At an interface of ordinary medium \textbf{(a)} with an isotropic medium of opposite group and phase velocity \textbf{(b)}, both wavevector and beam direction refract under negative angle. The principle of refractive index can be applied to compute the wave vector of a wave propagating along the optical axis of anisotropic media \textbf{(c)}, but the beam refraction follows a different rule as discussed in the text.} \label{fg_ifcnrk} \centering  
 	\includegraphics[width=.9\textwidth]{img/ifc_negrefrk.pdf} 
 \end{figure}
 
@@ -1322,7 +1322,15 @@ existence of effective parameters
 \subsection{Metamaterial homogenization} % note that NRW and CDH are discussed later
 \paragraph{todo}%{{{
 %% This is my approach only to a very complex problem; I can not solve all humankind's problems
+
+%Metamaterials are sometimes defined as sub-wavelength periodic
+%structures with properties not ocurring in nature, but my preferred
+%definition is anything that is subject to homogenisation – i.e. a
+%structure for which we can apply the Bloch-Floquet theorem
+%and determine the K-vector.
+
 Homogenization is not a search for an existing truth, but rather a somewhat arbitrary decision.
+
 
 Effective parameters
 
