conf review of history

--- a/fdphd.bib
+++ b/fdphd.bib
@@ -992,6 +992,16 @@ j%% TODO understand what this is about
   year={2004},
   publisher={APS}
 }
+@article{smith2000composite,
+  title={Composite medium with simultaneously negative permeability and permittivity},
+  author={Smith, David R and Padilla, Willie J and Vier, DC and Nemat-Nasser, Syrus C and Schultz, Seldon},
+  journal={Physical review letters},
+  volume={84},
+  number={18},
+  pages={4184},
+  year={2000},
+  publisher={APS}
+}
 /*}}}*/
 % -- Fishnets, meshes and EOT --/*{{{*/
 @article{zhou2008efficient,
