--- a/theory.tex
+++ b/theory.tex
@@ -1059,10 +1059,11 @@ The scientific progress rarely follows a straightforward, efficient way. Making 
 
 Moreover, the field covered by this thesis is also burdened by confusion of the terminology: objects falling under the definition of \textit{periodic structures} have been denoted in the literature also as \textit{metamaterials}, \textit{photonic crystals}, \textit{nanostructured electromagnetic materials} or \textit{composites}, \textit{photonic band-gap materials}, \textit{artificial dielectrics} etc. Typically, these terms are used without a proper definition, and may or may not overlap in their meaning. 
 
-An inconsistent terminology is apparently not only a formal issue, as it psychologically divides the scientific community and affects the future research.
-Physics, and the field of photonics in particular, have developed rapidly in the recent decades. Some of the seemingly novel concepts were in fact conceived much longer ago, as indicated in the following. Sometimes the mere change in terminology apparently lead the community to disregard, and later re-invent concepts that were already known \cite[p. 5]{klingshirn2007semiconductor}. 
+A split in terminology is apparently not only a formal issue, as it psychologically divides the scientific community and thus directs the future research.
+Physics, and the field under discussion in particular, have developed rapidly in the recent decades. Some of the seemingly novel concepts were in fact conceived much longer ago, as indicated in the following. Sometimes the mere change in terminology apparently lead the community to disregard, and later re-invent concepts that were already known \cite[p. 5]{klingshirn2007semiconductor}. 
 
-Somewhat experimentally, the following historical review of metamaterials and photonic crystals is organized into three independent paradigms that developed in parallel, and only later they were unified. Each of them on its own once might seem to already have given their fruits, but their \textit{unification} appears to have renewed the scientific interest and pushed the research further. 
+Following the author's personal view,
+the following historical review of metamaterials and photonic crystals is organized into three independent paradigms that developed in parallel, and only later they were unified. Each of them on its own once might seem to already have given their fruits, but their \textit{unification} appears to have renewed the scientific interest and pushed the research further. 
 
 This chapter can in no way cover all relevant papers and ideas over the last century; much better resources on the history of the field are in \cite{shamonina2007metamaterials,eleftheriades2012transforming}, at the web pages of Moroz \cite{moroz} etc. Also the actual designs of the periodic structures are mentioned very briefly, since they will be the subject of the Results section.
 
@@ -1142,8 +1143,8 @@ Subwavelength wire arrays have been experimentally used, at least, since 1898 as
 Periodic structures denoted as \textit{artificial dielectrics} \cite{brown1955properties} found their use in the 1940s to engineer the broad-band permittivity tensor with the application in lightweight lenses for microwave frequencies \cite{kock1948metallic}. They were still operated in the static limit below any resonance. Usually the particles consisted of hollow metal waveguides or spheres/disks which increased or reduced the wave phase velocity, respectively. 
 
 %}}}
-\subsection{First unification: metamaterials with uncommon parameters} %{{{
-\paragraph{Negative effective permittivity} %  - resonant electric dipole arrays
+\subsection{First unification: metamaterials with uncommon parameters} 
+\paragraph{Negative effective permittivity} %  - resonant electric dipole arrays %{{{
 1950s brought the first step towards achieving negative effective parameters from man-made periodic structures: The geometry of the wire array was chosen to put the fundamental resonance of the electric dipole \textit{below} the frequency of operation \cite{rotman1962plasma,boardman2005negative}, and thus acted as a Lorentz oscillator with permittivity curve very similar to that in Fig. \ref{fg_oscillator_spectrum}. 
 
 In the approximation of local media, the \textit{effective permittivity} $\eeff(\omega)$ of this type of artificial dielectrics had therefore a frequency range of negative values, or at least lower than one. This feature lead to the occasional use of the term \textit{artificial plasma} \cite{merkel1973simulation}. 
@@ -1160,12 +1161,11 @@ it could not become negative, since the effective permeability $\meff(\omega) > 
 \mdf{PK-"The word “metamaterial” (MM) appeared first in the paper by Smith et al. in 2000 [6] where a structured material" -- is it true? 
 Although somewhat redundant to \textit{artificial dielectrics}, it can be viewed as more fortunate as 
 It gained on significant popularity in the early 2000s, probably in connection with the Pendry's paper \cite{pendry1999magnetism} which outlined how a negative index of refraction can be obtained in a periodic medium, where metallic wires introduce $\eeff<0$ and small metallic loops embedded in the lattice, known as \textit{split-ring resonators} (SRR), introduce $\meff<0$.
+
+\cite{smith2000composite}
 }
 
-
-
 \textit{split-ring resonator}
-
 
 A major issue are the dissipative losses in resonant periodic structures, which were not sufficiently resolved yet. Some quantitative improvements can be easily done, namely thickening the metallic structures and increasing their inductance-to-capacitance ratios of the split-ring resonators (SRR) \cite{zhou2008efficient}. At the near-infrared and optical wavelengths, SRRs are better substituted by perforated metallic sheets, so called \textit{fishnets}, % todo cite
 and it may be favorable to substitute metals with certain types of oxides with near-infrared resonances \cite{naik2011oxides}.
@@ -1225,6 +1225,8 @@ Staying in the electrodynamics field, metamaterial research is not limited to sp
 
 
 %}}}
+
+
 \subsection{Second unification: metamaterials with photonic crystals} %%						 TODO%{{{
 The unification between 
 
