--- a/fdphd.bib
+++ b/fdphd.bib
@@ -672,6 +672,18 @@ j%% TODO understand what this is about
 
 % % == Photonic crystals ==
 % /*{{{*/
+
+@article{yablonovitch1987,
+  title = {Inhibited Spontaneous Emission in Solid-State Physics and Electronics},
+  author = {Yablonovitch, Eli},
+  journal = {Phys. Rev. Lett.},
+  volume = {58},
+  issue = {20},
+  pages = {2059--2062},
+  publisher = {American Physical Society},
+  doi = {10.1103/PhysRevLett.58.2059},
+  url = {http://link.aps.org/doi/10.1103/PhysRevLett.58.2059}
+}
 @book{joannopoulos2011photonic,
   title={Photonic crystals: molding the flow of light},
   author={Joannopoulos, John D and Johnson, Steven G and Winn, Joshua N and Meade, Robert D},
