--- a/theory.tex
+++ b/theory.tex
@@ -1063,7 +1063,7 @@ A split in terminology is apparently not only a formal issue, as it psychologica
 Physics, and the field under discussion in particular, have developed rapidly in the recent decades. Some of the seemingly novel concepts were in fact conceived much longer ago, as indicated in the following. Sometimes the mere change in terminology apparently lead the community to disregard, and later re-invent concepts that were already known \cite[p. 5]{klingshirn2007semiconductor}. 
 
 Following the author's personal view,
-the following historical review of metamaterials and photonic crystals is organized into three independent paradigms that developed in parallel, and only later they were unified. Each of them on its own once might seem to already have given their fruits, but their \textit{unification} appears to have renewed the scientific interest and pushed the research further. 
+the following historical notes on metamaterials and photonic crystals are organized into three independent paradigms that developed in parallel, and only later they were unified. Each of them, on its own, once might seem to already have given their fruits, but their \textit{unification} appears to have renewed the scientific interest and pushed the research further. 
 
 This chapter can in no way cover all relevant papers and ideas over the last century; much better resources on the history of the field are in \cite{shamonina2007metamaterials,eleftheriades2012transforming}, at the web pages of Moroz \cite{moroz} etc. Also the actual designs of the periodic structures are mentioned very briefly, since they will be the subject of the Results section.
 
@@ -1074,29 +1074,28 @@ In 1887, Lord Rayleigh \cite{johnson2003introduction} noticed the light reflecti
 Both effects are due to a presence of a Bragg band-gap, that is, enabled by the constructive interference of the wave reflected from the layers, either of different optical properties in the Rayleigh's experiment, or composed of the atomic lattice in the X-ray case. 
 
 The very same principle was later %% who was the first?
-employed for design and manufacturing of the \textit{dielectric mirrors}. Operating usually in the optical range, the mirrors consist of periodically alternating layers of quarter-wavelength thickness, made of two dielectrics with different wave impedance.  They found a wide application, owing to their advantages over classical metallic mirrors such as higher reflectivity and spectral selectivity.  %% this is related to the \textit{structural colours} found in nature -- who and when did it explain?
+employed for design and manufacturing of the \textit{dielectric mirrors}, which are made by sputtering multiple layers two alternating dielectrics of different wave impedance and with quarter-wavelength thickness. They find a wide variety of applications, owing to their advantages over classical metallic mirrors such as higher reflectivity and spectral selectivity.  %% this is related to the \textit{structural colours} found in nature -- who and when did it explain?
 
-Embedding one different layer, a \textit{defect}, into the middle of a dielectric mirror can introduce a narrow transmission window within its photonic band-gap. The corresponding \textit{defect mode} is characteristic by a strong field concentration in the defect, enabling to construct narrow-band photonic filters that can be moderately tuned by the defect properties \cite{nemec2005highly}.
+Embedding one layer different from others, a \textit{defect}, into the middle of a dielectric mirror can introduce a narrow transmission window within its photonic band-gap. The corresponding \textit{defect mode} is characteristic by a strong field concentration in the defect, enabling to construct narrow-band photonic filters that can be moderately tuned by the defect properties \cite{nemec2005highly}.
 
 %}}}
 \paragraph{Photonic crystals}%{{{
-The success in prohibiting the light to propagate along one direction inspired the design of two- and three-dimensional \textit{photonic crystals} in analogy with the band-gaps for the electron wave in natural crystals. A nontrivial accomplishments of achieving the \textit{complete band-gap}, blocking the light in all directions, is attributed to 
-%% yablonovich, john...
-%% phc  term first used in ??
+The success in prohibiting the light to propagate along one direction inspired the design of two- and three-dimensional \textit{photonic crystals}, named in analogy with the band-gaps for the electron wave in natural crystals. A nontrivial accomplishment of manufacturing the first three-dimensional structure with a nonzero range of frequencies for which there exists no propagating wave in any direction, the \textit{complete band-gap}, is attributed to Jablonovich \cite{yablonovitch1987}.
+%% phc term first used in ??
 % "Any dielectric material can be used to fabricate a photonic crystal with a sizeable and robust complete photonic bandgap (CPBG) in three dimensions, as long as small metal inclusions can be added." \cite{moroz2002metallo}
 \cite{joannopoulos2011photonic}
 
 %}}}
-\paragraph{modes and wave guiding}%{{{
-%% Waveguiding
-%}}}
-\textit{Planar band-gap structures} - \textit{Photonic-crystal waveguides in integrated optics} %todo
+\paragraph{Planar band-gap structures} %{{{
+The demands for the photonic crystal, 
+\textit{Photonic-crystal waveguides in integrated optics} %todo
 % Beam propagation in periodic planar waveguides \cite{zengerle1987light}
 %% TODO PhC slabs \cite{zengerle1987light}
 
 The \textit{photonic-crystal fiber} (PCF), which differs from the common index-guiding fibers by that the light is confined in its core by a photonic band-gap in both lateral directions, was conceived in 1970s. Both types of fibers can be additionally structured in the longitudinal directions, forming a \textit{distributed Bragg reflector}. Such mirrors, acting on the guided wave, can be made extremely narrowband, finding their use in fiber lasers, telecommunication, sensing, etc.
 
 Within the sole paradigm of band-gap engineering, new concepts emerge even in the last decade: Obviously, a minor shift of the band-gap changes whether the light at the frequency of the band-gap edge can propagate. Such a shift can be introduced e.g. by static magnetic-field in low-symmetry PhCs, resulting in enhanced magneto-optic interaction for one-dimensional light propagation \cite{vanwolleghem2009unidirectional}.
+
 
 %}}}
 
@@ -1122,6 +1121,7 @@ Clearly, the spherical aberrations would be absent in it, allowing a wide-angle 
 \paragraph{Electromagnetic cloaks}
 \cite{dollin1961possibility,alitalo2009electromagnetic}
 
+\cite{smith2000composite}
 %}}}
 
 \subsection{Artificial dielectrics and metamaterials} 
