--- a/theory.tex
+++ b/theory.tex
@@ -1088,16 +1088,16 @@ The success in prohibiting the light to propagate along one direction inspired t
 
 %}}}
 \paragraph{Band-gap used in fibers and waveguides} %{{{
-Embedding a linear defect into a photonic crystal forms a waveguide that can not radiate even when bent under sharp angles.
-The demands for achieving a complete band-gap in the photonic crystal, can be reduced if a two-dimensional band-gap structure is etched into a slab. Planar structures are also much easier to fabricate using developed techniques such as photolitography. A \textit{planar band-gap waveguide} are formed by a linear defect in a thin silica photonic crystal slab, which restricts the light by the total internal reflection horizontally and by the means of the two-dimensional band-gap vertically. Such structures are finding wide use as waveguides, beamsplitters and filters in \textit{integrated optics}. %todo
+Embedding a linear defect into the photonic crystal with a complete band gap forms a waveguide from which the wave can not escape, even when it is bent under sharp angles.
+The \textit{photonic-crystal fiber} (PCF), which differs from the common index-guiding fibers by that the light is confined in its core by a photonic band-gap in both lateral directions, was conceived in 1970s. Its special capability is to strongly guiede the wave even in a hollow core. % todo cite, where are the 70's ?
+
+The demands for achieving a complete three-dimensional band-gap can be reduced when a planar structure is etched into a dielectric slab. It is also much easier to fabricate using developed techniques such as photolitography. A \textit{planar band-gap waveguide} can be formed by a linear defect in the photonic crystal slab, which restricts the light by the total internal reflection horizontally and by the means of the two-dimensional band-gap vertically. Such structures can form waveguides, beamsplitters and filters in \textit{integrated optics}. 
 % Beam propagation in periodic planar waveguides \cite{zengerle1987light}
 %% TODO PhC slabs \cite{zengerle1987light}
 
-The \textit{photonic-crystal fiber} (PCF), which differs from the common index-guiding fibers by that the light is confined in its core by a photonic band-gap in both lateral directions, was conceived in 1970s. % todo cite, where are the 70's ?
-
 As a complementary concept, a longitudinal modulation can be inscribed into the index-guiding fibers, forming a \textit{distributed Bragg reflector}. Its filtering capabilities can be made extremely narrowband, which is employed in fiber lasers, telecommunication, sensing, etc. % TODO cite, when first?
 
-Within the sole paradigm of band-gap engineering, new concepts emerge even in the last decades: Obviously, a minor shift of the band-gap changes whether the light at the frequency of the band-gap edge can propagate. Such a shift can be introduced e.g. by static magnetic field in low symmetry PhCs, resulting in enhanced magneto-optic interaction for one-dimensional light propagation \cite{vanwolleghem2009unidirectional}.
+Within the sole paradigm of band-gap engineering, new concepts emerge even in the last decades: Obviously, a minor shift of the band-gap has a strong impact on whether the light can propagate. Such a shift can be introduced e.g. by static magnetic field in low symmetry PhCs, resulting in enhanced magneto-optic interaction for one-dimensional light propagation \cite{vanwolleghem2009unidirectional}.
 
 %}}}
 \subsection{Homogeneous media with uncommon parameters} 
